<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/operand_one_edit_text"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="@string/type_operand_one_hint"
        android:inputType="numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/operand_two_edit_text"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="@string/type_operand_two_hint"
        android:inputType="numberDecimal|numberSigned" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/operation_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="onAdd"
            android:text="@string/add_operation_text"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/operation_sub_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/operation_add_btn"
            android:background="@color/colorPrimary"
            android:onClick="onSub"
            android:text="@string/sub_operation_text"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/operation_div_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/operation_add_btn"
            android:background="@color/colorPrimary"
            android:onClick="onDiv"
            android:text="@string/div_operation_text"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/operation_mul_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/operation_add_btn"
            android:layout_toEndOf="@id/operation_add_btn"
            android:background="@color/colorPrimary"
            android:onClick="onMul"
            android:text="@string/mul_operation_text"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_pow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="48dp"
            android:layout_toEndOf="@id/operation_mul_btn"
            android:background="@color/colorPrimary"
            android:onClick="onPow"
            android:text="@string/power"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:visibility="visible" />

    </RelativeLayout>

    <TextView
        android:id="@+id/operation_result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:visibility="visible" />

</LinearLayout>